<resources>
    <string name="app_name">White Powder</string>
    <string name="action_settings">Settings</string>
    <string name="error_server_unreachable">White Powder no está disponible en este momento, por favor intente más tarde.</string>
    <string name="error_invalid_token">Error de autenticación. Por favor, vuelva a iniciar sesión.</string>
    <string name="error_unexpected_response">Los servidores de WhitePowder no estan funcionando correctamente en este momento, intente nuevamente más tarde.</string>
    <string name="error_invalid_characters">Los datos ingresados contienen caracteres inválidos como: &quot; { } [ ] = &amp;</string>
    <string name="title_section1">1</string>
    <string name="title_section2">2</string>
    <string name="title_section3">3</string>
    <string name="title_section4">4</string>
    <string name="title_section5">5</string>
    <string name="alert_exit_title">Salir</string>
    <string name="alert_exit_message">¿Estás seguro que deseas salir?</string>
    <string name="alert_no">No</string>
    <string name="alert_yes">Sí</string>
    <string name="alert_logout_title">Cerrar sesión</string>
    <string name="alert_logout_message">¿Estás seguro que deseas cerrar sesión?</string>
    <string name="process_dialog_login">Iniciando sesión&#8230;</string>
    <string name="process_dialog_pwd_reset">Reseteando contraseña&#8230;</string>
    <string name="process_dialog_register">Registrando usuario&#8230;</string>
    <string name="process_dialog_pwd_change">Cambiando contraseña&#8230;</string>
    <string name="process_dialog_emergency">Enviando alerta de emergencia&#8230;</string>
    <string name="profile_view_personal_info">Datos Personales</string>
    <string name="profile_view_stats">Estadísticas</string>
    <string name="profile_skier_mode">Modo esquiador</string>
    <string name="profile_pwd_change">Cambiar contraseña</string>
    <string name="profile_logout">Cerrar sesión</string>
    <string name="forecast_see_extended"><u>Ver pronóstico extendido</u></string>
    <string name="title_activity_basic_information_forecast">Pronóstico Extendido</string>
    <string name="submenu_change_password">Cambiar contraseña</string>
    <string name="submenu_logout">Cerrar sesión</string>
     <string name="submenu_update_inbox">Actualizar accidentes</string>
    <string name="submenu_sync">Sincronizar</string>
    <string name="sync_dialog_message">Sincronizando aplicación, por favor espere.</string>
    <string name="sync_toast_error">Se ha producido un error en la sincronización, por favor intente nuevamente más tarde</string>
    <string name="emergency_success_toast">La alerta de emergencia ha sido recibida exitosamente por el centro de esquí.</string>
    <string name="login_btn">INGRESAR</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="whitePowder_logo_description">Logo White Powder</string>
    <string name="login_error_incomplete_data">Tanto el usuario como la contraseña deben ser completados.</string>
    <string name="login_text_regiser">¡Registrarme!</string>
    <string name="login_text_reset_password">¡Olvidé mi contraseña!</string>
    <string name="login_error_user_password_incorrect">El usuario o la contraseña indicados son incorrectos.</string>
    <string name="password_not_secure">La contraseña debe ser de por lo menos seis caracteres.</string>
    <string name="register_registry_text">REGISTRO</string>
    <string name="register_hint_repeat_password">Repetir contraseña</string>
    <string name="hint_email">Email</string>
    <string name="send_btn">ENVIAR</string>
    <string name="register_error_incomplete_data">Por favor, para poder registrarte, completá todos los campos.</string>
    <string name="register_error_passwords_not_matching">Las contraseñas no coinciden.</string>
    <string name="register_error_email_not_valid">El email ingresado no es válido.</string>
    <string name="register_error_existing_username">El nombre de usuario ingresado ya ha sido registrado.</string>
    <string name="register_error_existing_email">El email ingresado ya ha sido registrado.</string>
    <string name="login_register_successful">¡Registro exitoso!</string>
    <string name="register_indications_text">Por favor, complete los siguientes campos:</string>
    <string name="pwd_change_text">Cambio de contraseña</string>
    <string name="pwd_change_instructions_text">Para el cambio de contraseña se requieren tanto la contraseña actual como la nueva. </string>
    <string name="pwd_change_hint_current_password">Contraseña actual</string>
    <string name="pwd_change_hint_new_password">Nueva contraseña</string>
    <string name="pwd_change_hint_repeat_new_password">Repetir nueva contraseña</string>
    <string name="pwd_change_error_incomplete_data">Por favor, para poder cambiar la contraseña, completá todos los campos.</string>
    <string name="pwd_change_error_passwords_not_matching">Las contraseñas no coinciden.</string>
    <string name="pwd_change_invalid_current_password">La contraseña actual es incorrecta.</string>
    <string name="pwd_change_try_again">No se pudo cambiar la contraseña. Vuelva a intentarlo más tarde.</string>
    <string name="pwd_change_successful">La contraseña ha sido cambiada exitosamente.</string>
    <string name="pwd_reset_title">Blanqueo de contraseña</string>
    <string name="pwd_reset_instructions">Si has olvidado tu contraseña, ingresa el e-mail con el que te has registrado y recibirás un mail con tu usuario y nueva contraseña.</string>
    <string name="pwd_reset_error_107">El email no se encuentra registrado.</string>
    <string name="pwd_reset_error_108">No se pudo cambiar la contraseña. Vuela a intentar.</string>
    <string name="pwd_reset_error_109">No se pudo enviar el mail con la nueva contraseña. Vuelva a intentar.</string>
    <string name="reset_invalid_email">El email ingresado no es válido.</string>
    <string name="login_reset_successful">¡Reseteo exitoso!</string>
    <string name="slope_recognition_text">RECONOCER PISTA</string>
    <string name="slope_recognition_start_text">COMENZAR</string>
    <string name="slope_recognition_stop_text">DETENER</string>
    <string name="slope_recognition_ok">ENVIAR</string>
    <string name="slope_recognition_cancel">DESCARTAR</string>
    <string name="slope_recognition_cant_sync_msj">No se puede sincronizar la aplicación mientras se reconoce una pista.</string>
    <string name="title_activity_nas">Normas y señales de seguridad</string>
    <string name="title_activity_sign">Señal</string>
    <string name="title_section_signs">Señales</string>
    <string name="title_section_norms">Normas</string>
    <string name="sign1_name">Avalancha</string>
    <string name="sign2_name">Dificultad fácil</string>
    <string name="sign3_name">Dificultad intermedia</string>
    <string name="sign4_name">Dificultad avanzada</string>
    <string name="sign5_name">Dificultad experto</string>
    <string name="sign6_name">Dificultad demente</string>
    <string name="sign7_name">Patrulla de esquí</string>
    <string name="sign8_name">Parque de terreno</string>
    <string name="sign9_name">Zona resbaladiza</string>
    <string name="sign10_name">Caida de nieve</string>
    <string name="sign11_name">Remolque</string>
    <string name="sign12_name">Esquí sobre hielo</string>
    <string name="sign13_name">Esquí</string>
    <string name="sign14_name">Snowboard</string>
    <string name="sign15_name">Esquí cuesta abajo</string>
    <string name="sign16_name">Salto de esquí</string>
    <string name="sign17_name">Deslizamiento en trineo</string>
    <string name="sign18_name">Motonieve</string>
    <string name="sign19_name">Prohibido esquí cuesta abajo</string>
    <string name="sign20_name">Prohibido salto de esquí</string>
    <string name="sign21_name">Prohibido deslizamiento en trineo</string>
    <string name="sign22_name">Prohibido motonieve</string>
    <string name="sign1_description">Señalización que indica el comienzo de una zona propensa a recibir avalanchas generadas a una mayor altitud en la montaña. Una avalancha es un desprendimiento violento de nieve que arrastra a su paso todo material presente en la ladera de la montaña, como rocas y árboles.</string>
    <string name="sign2_description">Señalización que indica el comienzo de una pista de dificultad fácil.</string>
    <string name="sign3_description">Señalización que indica el comienzo de una pista de dificultad intermedia.</string>
    <string name="sign4_description">Señalización que indica el comienzo de una pista de dificultad avanzada.</string>
    <string name="sign5_description">Señalización que indica el comienzo de una pista de dificultad experto.</string>
    <string name="sign6_description">Señalización que indica el comienzo de una pista de dificultad demente. Mantenerse lo más lejos posible porque existe presencia de esquiadores alienados.</string>
    <string name="sign7_description">Señalización que indica la presencia de una patrulla de ski. Una patrulla de esquí ofrece servicios médicos de emergencia y rescate a los participantes de los deportes en la nieve en una estación de esquí. Los patrulleros están entrenados en Soporte Vital Avanzado para estabilizar y trasladar a los pacientes a la atención definitiva, a menudo con las mismas capacidades que en una ambulancia.</string>
    <string name="sign8_description">Señalización que indica un parque de terreno. Un parque de terreno es una área de recreación consistente en terreno al aire libre que permite a los esquiadores y practicantes de snowboard realizar trucos. Los parques de terreno tienen sus raíces en parques de skateboard y muchas de las características son comunes a ambos.</string>
    <string name="sign9_description">Señalización que indica el comienzo de una zona resbaladiza. Siempre que sea posible, es deseable evitar transitar a pie por esta zona, a fin de evitar accidentes producto de una caida.</string>
    <string name="sign10_description">Señalización que indica una zona propensa a desprendimientos de nieve. Si bien no reviste la gravedad de una avalancha, puede generar perdida de equilibrio y caidas.</string>
    <string name="sign11_description">Señalización que indica la presencia de remolques o medios de elevación.</string>
    <string name="sign12_description">Señalización que indica el comienzo de la zona permitida para realizar esquí sobre hielo.</string>
    <string name="sign13_description">Señalización que indica el comienzo de la zona permitida para realizar esquí, en sus diferentes variantes (alpino, nórdico o de fondo).</string>
    <string name="sign14_description">Señalización que indica el comienzo de la zona permitida para realizar snowboard.</string>
    <string name="sign15_description">Señalización que indica el comienzo de la zona permitida para realizar esquí cuesta abajo, en pendiente o en descenso. Esta zona está particularmente diseñada para la posibilidad de alcanzar grandes velocidades de forma segura.</string>
    <string name="sign16_description">Señalización que indica el comienzo de la zona permitida para realizar salto de esquí. El salto de esquí es un deporte que consiste en descender sobre esquís por una rampa para obtener velocidad y luego iniciar el vuelo con el objetivo de aterrizar lo más lejos posible.</string>
    <string name="sign17_description">Señalización que indica el comienzo de la zona permitida para realizar deslizamiento en trineo. Esta práctica consiste en deslizarse por un tobogán especialmente diseñado para ser recorrido con un trineo de nieve.</string>
    <string name="sign18_description">Señalización que indica el comienzo de la zona permitida para conducir vehículos de nieve. Esta zona está particularmente diseñada para que el vehículo no cause accidentes ni desate avalanchas.</string>
</resources>