<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gr_background"
    android:weightSum="8"
    android:orientation="vertical"
    tools:context="com.whitepowder.userManagement.LoginActivity"
    tools:ignore="MergeRootFrame">
    
 <ImageView
     android:id="@+id/login_logo_WhitePowder"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_alignParentTop="true"
     android:contentDescription="@string/whitePowder_logo_description"
     android:layout_weight="4"
     android:layout_marginTop="15dp"
     android:layout_centerHorizontal="true"
     android:scaleType="centerInside"
     android:src="@drawable/ic_bannerwp" />
    
 <RelativeLayout
     android:id="@+id/login_username_container"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:layout_centerVertical="true"
     android:layout_below="@+id/login_logo_WhitePowder">

     <EditText
         android:id="@+id/login_username_input"
         android:inputType="text"
         android:hint="@string/hint_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:ems="15">
         <requestFocus />
     </EditText>
         

 </RelativeLayout>
 
  <RelativeLayout
     android:id="@+id/login_password_container"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:layout_marginTop="10dp"
     android:layout_below="@+id/login_username_container">

      <EditText
          android:id="@+id/login_password_input"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:hint="@string/hint_password"
          android:layout_centerVertical="true"
          android:ems="15"
          android:inputType="textPassword" >

      </EditText>

  </RelativeLayout>
  
    <RelativeLayout
     android:id="@+id/login_login_button"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:layout_marginTop="10dp"
     android:gravity="center"
     android:layout_below="@+id/login_password_container"
     android:background="#7caf00" >
     	
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
           	android:textSize="20sp"
            android:textColor="#FFFFFF" /> 
                
  </RelativeLayout>
   
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:layout_below="@+id/login_login_button"
       android:orientation="horizontal"
       android:layout_marginTop="15dp"
       android:gravity="center_horizontal" >

	   <TextView 
	      android:id="@+id/login_register_button"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textSize="16sp"
	      android:text="@string/login_text_regiser"  />
	   
	   <TextView
	      android:id="@+id/login_reset_button" 
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:textSize="16sp"
	      android:text="@string/login_text_reset_password"
	      android:layout_marginLeft="20dp"  />
   
   </LinearLayout>
     
</LinearLayout>