<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pwd_reset_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DCAEC"
    tools:ignore="MergeRootFrame">

	<TextView
	    android:id="@+id/pwd_reset_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="25dp"
	    android:text="@string/pwd_reset_title"
	    android:textSize="20sp" />
    
	<TextView
	    android:id="@+id/pwd_reset_instructions"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_margin="20dp"
	    android:gravity="center_horizontal"    
	    android:layout_below="@id/pwd_reset_title"
	    android:text="@string/pwd_reset_instructions"
	    android:textSize="16sp" />
	
	 <RelativeLayout
	     android:id="@+id/pwd_reset_email_container"
	     android:layout_width="match_parent"
	     android:layout_height="65dp"
	     android:layout_centerVertical="true"
	     android:layout_below="@id/pwd_reset_instructions"
	     android:layout_marginTop="25dp"
	     android:background="#FFFFFF">
	     	
	     <EditText
	         android:id="@+id/pwd_reset_email_input"
	         android:inputType="textEmailAddress"
	         android:hint="@string/hint_email"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_centerHorizontal="true"
	         android:layout_centerVertical="true"
	         android:ems="15">
	         <requestFocus />
	     </EditText>	
	 </RelativeLayout>
	 
	 
	<RelativeLayout
	     android:id="@+id/pwd_reset_send_button"
	     android:layout_width="match_parent"
	     android:layout_height="50dp"
	     android:layout_marginTop="20dp"
	     android:gravity="center"
	     android:layout_below="@+id/pwd_reset_email_container"
	     android:background="#7caf00" >
	     	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/send_btn"
	           	android:textSize="20sp"
	            android:textColor="#FFFFFF" /> 
	                
	  </RelativeLayout>		 
	     
</RelativeLayout>