<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pwd_change_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="7"
    android:orientation="vertical"
    android:background="@drawable/gr_background"
    tools:ignore="MergeRootFrame">

    
    <RelativeLayout 
        android:id="@+id/PassChangeContent1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">    
    
    	<RelativeLayout
	        android:id="@+id/StartMargin1"
	        android:layout_height="1dp"
	        android:layout_width="match_parent"
	        android:background="#ffffff"/>	    
    
    
	    <RelativeLayout
		        android:id="@+id/PassChangeBan1"
		        android:layout_height="30dp"
		        android:layout_width="match_parent"
		        android:background="#038abe"
		        android:layout_below="@id/StartMargin1">	        
	         
			    <TextView
			        android:id="@+id/PassChangeBanner"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:gravity="center"
			        android:text="@string/pwd_change_text"
			        android:textColor="#ffffff"
			        android:textSize="20sp"/>   
	            	        
	        </RelativeLayout>
	        <RelativeLayout
		        android:id="@+id/PassChangeMargin1"
		        android:layout_height="5dp"
		        android:layout_width="match_parent"
		        android:background="#055777"
		        android:layout_below="@id/PassChangeBan1"/>
	        
	        <TextView 
	            android:id="@+id/passChange_indications"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/pwd_change_instructions_text"
	            android:textColor="#ffffff"
	            android:textSize="18sp"
	            android:paddingLeft="10dp"
				android:paddingRight="10dp"
	            android:layout_marginTop="20dp"
	            android:layout_below="@id/PassChangeMargin1"
	            android:gravity="center_horizontal"
	            />	
		
	    
	</RelativeLayout>      
    

     
     <RelativeLayout
	     android:id="@+id/pwd_change_current_password_container"
	     android:layout_width="match_parent"
	     android:layout_height="0dp"
	     android:layout_weight="1"
	     android:layout_marginTop="25dp">
	
	      <EditText
	          android:id="@+id/pwd_change_current_password_input"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_centerHorizontal="true"
	          android:hint="@string/pwd_change_hint_current_password"
	          android:layout_centerVertical="true"
	          android:ems="15"
	          android:inputType="textPassword" >
	          <requestFocus />
	      </EditText>
	</RelativeLayout>
	
    <RelativeLayout
	     android:id="@+id/pwd_change_new_password_container"
	     android:layout_width="match_parent"
	     android:layout_height="0dp"
	     android:layout_weight="1"
	     android:layout_marginTop="10dp"
	     android:layout_below="@+id/pwd_change_current_password_container">
	
	      <EditText
	          android:id="@+id/pwd_change_new_password_input"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_centerHorizontal="true"
	          android:hint="@string/pwd_change_hint_new_password"
	          android:layout_centerVertical="true"
	          android:ems="15"
	          android:inputType="textPassword" >
	      </EditText>
	</RelativeLayout>
	
    <RelativeLayout
	     android:id="@+id/pwd_change_repeat_new_password_container"
	     android:layout_width="match_parent"
	     android:layout_height="0dp"
	     android:layout_weight="1"
	     android:layout_centerVertical="true"
	     android:layout_below="@id/pwd_change_new_password_container"
	     android:layout_marginTop="10dp">
	     	
	     <EditText
	         android:id="@+id/pwd_change_repeat_new_password_input"
	         android:inputType="textPassword"
	         android:hint="@string/pwd_change_hint_repeat_new_password"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_centerHorizontal="true"
	         android:layout_centerVertical="true"
	         android:ems="15" />	
	 </RelativeLayout>
	 
	 <RelativeLayout
	     android:id="@+id/pwd_change_change_button"
	     android:layout_width="match_parent"
	     android:layout_height="0dp"
	     android:layout_marginTop="20dp"
	     android:layout_weight="1"
	     android:gravity="center"
	     android:layout_below="@+id/pwd_change_repeat_new_password_container"
	     android:background="#7caf00" >
	     	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/send_btn"
	           	android:textSize="20sp"
	            android:textColor="#FFFFFF" /> 
	                
	  </RelativeLayout>		  
	     
</LinearLayout>