<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:id="@+id/profile_view_stats_container"
	    android:layout_width="fill_parent"
	    android:layout_height="25dp"
	    >
	    <TextView
	        android:id="@+id/profile_view_stats"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/profile_view_stats"
	        android:layout_centerVertical="true"
	        />
    </RelativeLayout>
    
   <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#6DCAEC"
	    android:layout_marginBottom="2dp"
	    android:layout_marginTop="2dp"/>
   
    <RelativeLayout
		android:layout_width="fill_parent"
        android:layout_height="25dp" >

        <Switch
            android:id="@+id/profile_skier_mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:checked="true"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/profile_skier_mode" />

    </RelativeLayout>
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#6DCAEC"
	    android:layout_marginBottom="2dp"
	    android:layout_marginTop="2dp"/>
    
    <RelativeLayout 
        android:id="@+id/profile_pwd_change_container"
	    android:layout_width="fill_parent"
	    android:layout_height="25dp"
	    >
	    <TextView
	        android:id="@+id/profile_pwd_change"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/profile_pwd_change"
	        android:layout_centerVertical="true"
	        />
    </RelativeLayout>
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="#6DCAEC"
	    android:layout_marginBottom="2dp"
	    android:layout_marginTop="2dp"/>
    
    <RelativeLayout 
        android:id="@+id/profile_logout_container"
	    android:layout_width="fill_parent"
	    android:layout_height="25dp"
	    >
	    <TextView
	        android:id="@+id/profile_logout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/profile_logout"
	        android:layout_centerVertical="true"
	        />
    </RelativeLayout>

</LinearLayout>
